nginx.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: nginx-deployment
  
  namespace: prod

  labels:

    app: nginx

spec:

  replicas: 4

  selector:

    matchLabels:

      app: nginx

  template:

    metadata:

      labels:

        app: nginx

    spec:

      containers:

      - name: nginx

        image: nginx:1.14.2

        ports:

        - containerPort: 80
