servics.yaml
apiVersion: v1

kind: Service

metadata:

  name: my-nginx-service
  namespace: prod

spec:

  selector:

    app: nginx

  ports:

    - protocol: TCP

      port: 80

      targetPort: 80
