ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: agoraaksdev.agoraapi.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  my-nginx-service
                port:
                  number: 80
